assets/src/style/partials/_flipboxes.scss
.person {

  &,
  .flip {
    background: {
      position: center center;
      repeat: no-repeat;
    }
  }

  .flip {
    background-size: contain;
  }

  &.filler {
    background: $goldenrod;
  }

  &.tim {

    background-image: url('../../images/team/1-Tim.jpg');
    background-position: -120px -70px;
    background-size: 300%;

    .flip {
      background-image: url('../../images/team/person/tim.jpg');
    }

  }

  &.lori {

    background-image: url('../../images/team/2-Lori.jpg');
    background-position: -40px -10px;
    background-size: 200%;

    .flip {
      background-image: url('../../images/team/person/lori.jpg');
    }

  }

  &.mattm {

    background-image: url('../../images/team/3-MattM.jpg');
    background-position: -150px -10px;
    background-size: 210%;

    .flip {
      background-image: url('../../images/team/person/mattm.jpg');
    }

  }

  &.david {

    background-image: url('../../images/team/4-David.jpg');
    background-position: -77px -20px;
    background-size: 220%;

    .flip {
      background-image: url('../../images/team/person/david.jpg');
    }

  }

  &.alicia {

    background-image: url('../../images/team/5-Alicia.jpg');
    background-position: -127px -10px;
    background-size: 200%;

    .flip {
      background-image: url('../../images/team/person/alicia.jpg');
    }

  }

  &.len {

    background-image: url('../../images/team/6-Len.jpg');
    background-position: -137px -20px;
    background-size: 200%;

    .flip {
      background-image: url('../../images/team/person/len.jpg');
    }

  }

  &.bridget {

    background-image: url('../../images/team/7-Bridget.jpg');
    background-position: -117px -8px;
    background-size: 200%;

    .flip {
      background-image: url('../../images/team/person/bridget.jpg');
    }

  }

  &.matts {

    background-image: url('../../images/team/8-MattS.jpg');
    background-position: -157px -20px;
    background-size: 220%;

    .flip {
      background-image: url('../../images/team/person/matts.jpg');
    }

  }

  &.carrie {

    background-image: url('../../images/team/9-Carrie.jpg');
    background-position: -127px -10px;
    background-size: 201%;

    .flip {
      background-image: url('../../images/team/person/carrie.jpg');
    }

  }

  &.cathy {

    background-image: url('../../images/team/10-Cathy.jpg');
    background-position: -82px -4px;
    background-size: 155%;

    .flip {
      background-image: url('../../images/team/person/cathy.jpg');
    }

  }

  &.clarke {

    background-image: url('../../images/team/11-Clarke.jpg');
    background-position: -131px -5px;
    background-size: 190%;

    .flip {
      background-image: url('../../images/team/person/clarke.jpg');
    }

  }

  &.katie {

    background-image: url('../../images/team/14-Katie.jpg');
    background-position: -109px -31px;
    background-size: 175%;

    .flip {
      background-image: url('../../images/team/person/katie.jpg');
    }

  }

  &.jessica {

    background-image: url('../../images/team/12-Jessica.jpg');
    background-position: -94px -41px;
    background-size: 220%;

    .flip {
      background-image: url('../../images/team/person/jessica.jpg');
    }

  }

  &.meghan {

    background-image: url('../../images/team/13-Meghan.jpg');
    background-position: -125px -28px;
    background-size: 195%;

    .flip {
      background-image: url('../../images/team/person/meghan.jpg');
    }

  }

  &.producer {

    background: {
      size: cover;
      position: center center;
      repeat: no-repeat;
    }

    .producer-name {
      position: absolute;
      top: 105%;
      left: 0px;
      right: 0px;
      line-height: 1.3;
    }

    .producer-title {
      font-style: italic;
    }

  }

  &.khinds {
    background-image: url('../../images/team/producers/khinds.jpg');
  }

  &.jlangenfeld {
    background-image: url('../../images/team/producers/jlangenfeld.jpg');
  }

  &.btriantafillou {
    background-image: url('../../images/team/producers/btriantafillou.jpg');
  }

  &.slubitsch {
    background-image: url('../../images/team/producers/slubitsch.jpg');
  }

}

.client {

  &.clearchoice {
    background-image: url('../../images/clients/clearchoice.png');
  }

  &.ally {
    background-image: url('../../images/clients/ally.png');
  }

  &.booth {
    background-image: url('../../images/clients/booth.png');
  }

  &.devry {
    background-image: url('../../images/clients/devry.png');
  }

  &.nar {
    background-image: url('../../images/clients/nationalrealtors.png');
  }

  &.erie {
    background-image: url('../../images/clients/erie.png');
  }

  &.uscellular {
    background-image: url('../../images/clients/uscell.png');
  }

  &.wilson {
    background-image: url('../../images/clients/wilson.png');
  }

  &.honeywell {
    background-image: url('../../images/clients/honeywell.png');
  }

  &.ctca {
    background-image: url('../../images/clients/cancertreatment.png');
  }

}

.mobile-col-clearfix {
  display: none;
}

.flip {
  display: none;
  z-index: 1;
  position: absolute;
  top: 0px;
  left: 0px;
  background-color: $gray;
}

.bigshow {

  display: none;
  z-index: 999;
  position: relative;
  top: 0;
  left: 0;
  width: 375px;
  height: 370px;
  opacity: 0;
  background: {
    color: $black;
    repeat: no-repeat;
    size: 200%;
  }
  transition: opacity 150ms ease-in-out;

  &.active {
    opacity: 1;
  }

  &::before {
    content: 'X';
    position: absolute;
    top: .35em;
    right: .35em;
    color: $white;
    font-size: 30px;
    line-height: 1;
    text-shadow: 0px 0px 4px transparentize($black, .5);
  }

  .tim & {
    background-image: url('../../images/team/1-Tim.jpg');
    background-position: -210px -140px;
    background-size: 270%;
  }

  .lori & {
    background-image: url('../../images/team/2-Lori.jpg');
    background-position: -40px -10px;
  }

  .mattm & {
    background-image: url('../../images/team/3-MattM.jpg');
    background-position: -260px -10px;
  }

  .david & {
    background-image: url('../../images/team/4-David.jpg');
    background-position: -125px -10px;
  }

  .alicia & {
    background-image: url('../../images/team/5-Alicia.jpg');
    background-position: -260px -10px;
  }

  .clarke & {
    background-image: url('../../images/team/11-Clarke.jpg');
    background-position: -271px -5px;
  }

  .katie & {
    background-image: url('../../images/team/14-Katie.jpg');
    background-position: -216px -59px;
    background-size: 170%;
  }

  .bridget & {
    background-image: url('../../images/team/7-Bridget.jpg');
    background-position: -230px -10px;
  }

  .carrie & {
    background-image: url('../../images/team/9-Carrie.jpg');
    background-position: -247px -10px;
  }

  .cathy & {
    background-image: url('../../images/team/10-Cathy.jpg');
    background-position: -201px -41px;
    background-size: 165%;
  }

  .jessica & {
    background-image: url('../../images/team/12-Jessica.jpg');
    background-position: -170px -70px;
  }

  .meghan & {
    background-image: url('../../images/team/13-Meghan.jpg');
    background-position: -189px -26px;
    background-size: 160%;
  }

  .len & {
    background-image: url('../../images/team/6-Len.jpg');
    background-position: -237px -20px;
  }

  .matts & {
    background-image: url('../../images/team/8-MattS.jpg');
    background-position: -237px -20px;
  }

  .clearchoice & {
    background-image: url('../../images/clients/flips/clearchoice.jpg');
  }

  .ally & {
    background-image: url('../../images/clients/flips/ally.jpg');
  }

  .booth & {
    background-image: url('../../images/clients/flips/booth.jpg');
  }

  .devry & {
    background-image: url('../../images/clients/flips/devry.jpg');
  }

  .nar & {
    background-image: url('../../images/clients/flips/nationalrealtors.jpg');
  }

  .erie & {
    background-image: url('../../images/clients/flips/erie.jpg');
  }

  .uscellular & {
    background-image: url('../../images/clients/flips/uscell.jpg');
  }

  .wilson & {
    background-image: url('../../images/clients/flips/wilson.jpg');
  }

  .honeywell & {
    background-image: url('../../images/clients/flips/honeywell.jpg');
  }

  .ctca & {
    left: -195px;
    background-image: url('../../images/clients/flips/cancertreatment.jpg');
  }

}

.cards {

  .open {

    .bigshow {
      display: inline-block;
    }

    .flip {
      display: none;
    }

  }

}

.erie,
.uscellular,
.wilson,
.honeywell,
.ctca {

  .bigshow {
    top: -190px;
  }

}

.clearchoice,
.ally,
.booth,
.devry,
.nar,
.erie,
.uscellular,
.wilson,
.honeywell,
.ctca {

  .bigshow {
    background: {
      position: center center;
      size: cover;
    }
  }

}

.mattm,
.david,
.bridget,
.katie,
.carrie,
.meghan,
.lori,
.booth,
.devry,
.nar {

  .bigshow {
    left: -195px;
  }

}

@media only screen and (max-width: 982px) {

  .carrie,
  .david {

    .bigshow {
      left: 0;
    }

  }

  .cathy {

    .bigshow {
      left: -195px;
    }

  }
  
  .person.producer {

    .producer-name {
      top: auto;
      bottom: 4px;
      padding: 0px 8px;
      color: $white;
      text-shadow: 0px 0px 4px $black;
      font-size: 14px;
    }

  }

}

@media only screen and (max-width: 967px) {

  .cathy,
  .carrie,
  .katie,
  .meghan {

    .bigshow {
      left: 0;
    }

  }

  .len,
  .matts,
  .david,
  .jessica
   {

    .bigshow {
      left: -195px;
    }

  }

  .wilson {

    .bigshow {
      left: -195px;
    }

  }

  .person.producer {

    .producer-name {
      top: auto;
      bottom: 4px;
      padding: 0px 8px;
      color: $white;
      text-shadow: 0px 0px 4px $black;
      font-size: 14px;
    }

  }

}

@media only screen and (max-width: 773px) {

  .len,
  .bridget,
  .lori,
  .devry {

    .bigshow {
      left: 0;
    }

  }

  .erie,
  .katie,
  .carrie,
  .jessica,
  .honeywell {

    .bigshow {
      left: -195px;
    }

  }

}

@media only screen and (max-width: 577px) {

  .mobile-col-clearfix {

    display: block;
    height: 0px;

    &:before,
    &:after {
      content: ' ';
      display: table;
    }

    &:after {
      clear: both;
    }

  }

  .person {

    &.tim {
      background-position: -105px -58px;
    }

    &.mattm {
      background-position: -120px 0px;
    }

    &.david {
      background-position: -60px -10px;
    }


    &.len {
      background-position: -105px 0px;
    }

    &.clarke {
      background-position: -105px 0px;
    }

    &.cathy {
      background-position: -70px -5px;
    }

    &.katie {
      background-position: -91px -19px;
    }

    &.bridget {
      background-position: -95px 0px;
    }

    &.matts {
      background-position: -125px -15px;
    }

    &.carrie {
      background-position: -105px -10px;
    }

    &.lori {
      background-position: -35px -10px;
    }

    &.jessica {
      background-position: -85px -20px;
    }

    &.meghan {
      background-position: -107px -26px;
    }

  }

  .tim,
  .david,
  .len,
  .cathy,
  .bridget,
  .carrie,
  .clarke,
  .meghan,
  .clearchoice,
  .booth,
  .nar,
  .uscellular,
  .honeywell {

    .bigshow {
      left: 0;
    }

  }

  .mattm,
  .len,
  .katie,
  .matts,
  .lori,
  .jessica,
  .ally,
  .devry,
  .erie,
  .wilson,
  .ctca {

    .bigshow {
      left: -162px;
    }

  }

  .ally,
  .devry,
  .erie,
  .wilson {

    .bigshow {
      top: auto;
      bottom: 0px;
    }

  }

  .client {

    .bigshow {
      top: 0px;
    }

  }

  .honeywell,
  .ctca {

    .bigshow {
      top: -158px;
    }

  }

}

